Add production config for Railway deploy: prod profile, env-driven CORS and API URL